# navescript

./: .gitignore  Cargo.toml  Dockerfile  FILEDESCRIPTIONS.md  INSTALL.md  Makefile  NvSNativeScripting.py  NvSUnicode.py  README.md  RELEASE.md  ROADMAP.md  STATUS.md  TO DO LIST.py  adddevkit.rtf  apple:androidmissingfeatures.py  audit.nave  build-all.sh  build.rs  devkit.py  expiramentalfeatures.py  finish 1.py  finish 2.py  fixthese.py  gemini finish features.py  go.mod  install.sh  jarvis_final.audit  makefileslist1.rtf  missingdistrubution.py  missingsubfeatures.py  missingsymbols.py  nasi_prod.audit  nasm_compiled.wat  nasm_compiled.wit  navescript.json  nvs.config.yaml  nvsnativeshortcuts.py  output.wat  prod_lock.audit  test_ffi_c  (+1 more)
.github/workflows/: ci.yml  codeql.yml
bindings/csharp/: NvsRuntime.cs
bindings/dart/: nvs.dart
bindings/go/: nvs.go
bindings/java/: NvsRuntime.java
bindings/kotlin/: NvsRuntime.kt
bindings/lua/: nvs.lua
bindings/node/: nvs.js  nvs_addon.cc
bindings/php/: nvs.php
bindings/python/: nvs.py  nvs_runtime.c
bindings/ruby/: nvs.rb
bindings/swift/: NvsRuntime.swift
cmd/nvm/: main.go  nvm.sh
cmd/nvs/: main.go
cmd/nvs-debug/: main.go
cmd/nvs-doc/: main.go
cmd/nvs-lsp/: main.go
cmd/nvs-wasm/: main.go
docs/: api.md  api_reference.md  cookbook.md  cookbook_polyglot.md  spec.md
docs/book/: BOOK.md
examples/: complete_test.ns  dro1dra1n_port.nave  hello.nave  jarvis_interface.nave  jarvis_production_hardened.nave  jarvis_production_system.nave  jarvis_v040_production.nave  jarvis_v041_dynamic.nave  jarvis_v10_graph.nave  jarvis_wasi_production.nave  nasi_interface.nasi  nasi_test.nave  nasm_example.nasm  nasm_example.nave  nasm_test.nave  polyglot.nave  polyglot_5_langs.nave  security_research.ns  system_health.nave  test.ns  translation_compare.nave  wasi_test.nave
examples/showcase/: main.ns
examples/web_server/: main.ns
include/: nave_api.h
integrations/vscode/: language-configuration.json  package.json
internal/ast/: ast.go
internal/binder/: mod.ns
internal/compiler/: compiler.go
internal/contracts/: contracts.go
internal/debugger/: debugger.go  mod.ns
internal/docgen/: generator.go  mod.ns
internal/engines/: python.go  wasm.go
internal/ffi/: registry.go
internal/gc/: gc.ns
internal/lexer/: lexer.go  lexer_test.go  token.go
internal/lsp/: mod.ns  server.go
internal/macros/: mod.ns
internal/nasm_wasm/: wasm_compiler.asm
internal/nvc/: mod.ns
internal/nvsh/: mod.ns
internal/oop/: class.go
internal/packager/: nvc.ns
internal/parser/: ast.go  nasi_parser_ext.go  parser.go  parser_test.go
internal/polyglot/: bridge.go
internal/reactive/: observable.go
internal/stdlib/: crypto.go  crypto_json.go  fs.go  json.go  net.go
internal/types/: types.go
internal/vm/: vm.go
internal/wasi/: nasi_core.ns  wasi_snapshot_preview1.ns
nasi-core/: Cargo.toml
nasi-core-guest/: Cargo.toml
nasi-core-guest/src/: lib.rs
nasi-core/src/: lib.rs
nvkernel/: Makefile
nvkernel/boot/: linker.ld  multiboot2.asm  x86_64.asm
nvkernel/src/: gdt.ns  idt.ns  interrupt.ns  keyboard.ns  main.ns  memory.ns  print.ns  scheduler.ns  syscall.ns
nvs-pkg/: pkg.nvs.toml
plugins/: plugin_templates.c  sample_plugin.py
runtime/: Cargo.toml
runtime/src/: gc.rs  jit.rs  loader.rs  main.rs  nasi.rs
scripts/: build.sh  distribute.sh  install.sh
sdk/: README.md
spec/: nas_nasi_v1.md
src/: auth.rs  batch.rs  cache.rs  compiler.rs  cranelift_backend.rs  crypto.rs  distributed.rs  distributed_tests.rs  error_handler.rs  ffi.rs  ir.rs  ir_high.rs  jwt.rs  lib.rs  lsp.rs  main.rs  nasi.rs  nasm.rs  ns_compiler.rs  ns_lexer.rs  ns_lexer.rs_scan_token_part.txt  ns_parser.rs  package.rs  package_manager.rs  parser.rs  plugin.rs  polyglot.rs  queue.rs  redundancy.rs  runtime.rs  sandbox.rs  scheduler.rs  search.rs  test.rs  types.rs  web3.rs
std/: navescript.json
test/: vm_test.go
tests/: core_test.ns  stress_bridge.py  test_ffi_c.c  test_pynvs.py
wit/: audio.wit  auth.wit  batch.wit  cache.wit  compression.wit  crypto.wit  dask.wit  db.wit  ffmpeg.wit  grpc.wit  hid.wit  i2c.wit  image.wit  jwt.wit  ldap.wit  metrics.wit  ml.wit  mongodb.wit  mysql.wit  nasi_core.wit  navescript.wit  observability.wit  pandas.wit  postgres.wit  queue.wit  redis.wit  scheduler.wit  search.wit  serial.wit  spark.wit  spi.wit  sqlite.wit  tracing.wit  usb.wit  web3.wit  websocket.wit
(+155 files in other folders)
