[package]
name = "navescript"
version = "0.3.0"
edition = "2021"
authors = ["Evan Shipley"]
description = "Nλvescript: A Universal Polyglot Language & WASI Runtime"
repository = "https://github.com/naveos/navescript"

[dependencies]
# CLI and Error Handling
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM Runtime
wasmtime = "26.0"
wasmtime-wasi = "26.0"

# Utilities
log = "0.4"
env_logger = "0.11"
colored = "2.0"

[dev-dependencies]
assert_fs = "1.1"
predicates = "3.1"
