[package]
name = "navescript"
version = "0.3.2"
edition = "2021"
authors = ["Evan Shipley"]
description = "Nλvescript: A Universal Polyglot Language & WASI Runtime"
repository = "https://github.com/naveos/navescript"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# CLI and Error Handling
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM Runtime
wasmtime = { version = "26.0", features = ["component-model", "async"] }
wasmtime-wasi = { version = "26.0" }

# Native Compilation (Cranelift)
cranelift = "0.110"
cranelift-frontend = "0.110"
cranelift-module = "0.110"
cranelift-native = "0.110"
cranelift-object = "0.110"
target-lexicon = "0.12"

# Utilities
log = "0.4"
env_logger = "0.11"
colored = "2.0"
rand = "0.8"
async-recursion = "1.1.1"

[dev-dependencies]
assert_fs = "1.1"
predicates = "3.1"
